Bug #10244 valgrind warning: uninitialized value use in QUICK_RANGE_SELECT::reset()
Submitted: 28 Apr 2005 20:36 Modified: 3 May 2005 8:49
Reporter: Sergey Petrunya Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server: Optimizer Severity:S3 (Non-critical)
Version:5.0-bk OS:
Assigned to: Sergey Petrunya CPU Architecture:Any

[28 Apr 2005 20:36] Sergey Petrunya
Description:
Spotted by Magnus: 
Running mysql-test-run --valgrind produces many warnings like this: 

==17726==    at 0x829F82A: QUICK_RANGE_SELECT::reset() (opt_range.cc:5930)
==17726==    by 0x82AAEA7: find_all_keys(st_sort_param*, SQL_SELECT*, unsigned char**, st_io_cache*, st_io_cache*, st_io_cache*) (filesort.cc:433)
==17726==    by 0x82AA590: filesort(THD*, st_table*, st_sort_field*, unsigned, SQL_SELECT*, unsigned long long, unsigned long long*) (filesort.cc:224)
==17726==    by 0x8248C00: create_sort_index(THD*, JOIN*, st_order*, unsigned long long, unsigned long long) (sql_select.cc:10980)
==17726==    by 0x8232327: JOIN::exec() (sql_select.cc:1598)
==17726==    by 0x8233670: _Z12mysql_selectP3THDPPP4ItemP13st_table_listjR4ListIS1_ES2_jP8st_orderSB_S2_SB_mP13select_resultP18st_select_lex_unitP13st_select
_lex (sql_select.cc:2062)
==17726==    by 0x822D917: handle_select(THD*, st_lex*, select_result*, unsigned long) (sql_select.cc:228)
==17726==    by 0x81FA17D: mysql_execute_command(THD*) (sql_parse.cc:2393)
==17726==    by 0x820257A: mysql_parse(THD*, char*, unsigned) (sql_parse.cc:5178)
==17726==    by 0x81F82F2: dispatch_command(enum_server_command, THD*, char*, unsigned) (sql_parse.cc:1651)
==17726==    by 0x81F7B88: do_command(THD*) (sql_parse.cc:1457)
==17726==    by 0x81F6D18: handle_one_connection (sql_parse.cc:1114)
==17726==    by 0x1BA87BBA: thread_wrapper (vg_libpthread.c:867)
==17726==    by 0xB000F64F: do__quit (vg_scheduler.c:1872)

Tests affected: I observed in ndb_basic.test, maybe in others too

How to repeat:
Run tests with valgrind
[28 Apr 2005 21:12] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/24463